--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-flask
+#flask
 jsonpickle
 flask-socketio
 eventlet
@@ -10,3 +10,9 @@ numpy
 tensorflow
 gunicorn
 munch
+click==8.0.4
+Flask==2.0.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+Werkzeug==2.0.3
