--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 #flask
-jsonpickle
-flask-socketio
-eventlet
-flask-login
-flask_cors
-cython
-pandas
-numpy
-tensorflow
+jsonpickle==1.1
+flask-socketio==4.2.1
+eventlet==0.25.1
+flask-login==0.4.1
+flask_cors==3.0.8
+cython==0.29.13
+pandas==0.25.1
+numpy==1.17.2
+tensorflow==1.15.4
 gunicorn
-munch
+munch==2.4.0
 click==8.0.4
 Flask==2.0.3
 itsdangerous==2.1.2
